--- a/src/main/resources/templates/cliente.html
+++ b/src/main/resources/templates/cliente.html
@@ -5,9 +5,77 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+       <link rel="stylesheet" href="../static/css/cliente.css">
+    <title>Clientes</title>
 </head>
 <body>
-    <h1>PAGINA TESTE</h1>
+    <header>
+        <div class="titulo">Lista de Clientes</div>
+        <form action="/returnMain" method="post">
+            <button class="returnHeader" type="submit">Retornar</button>
+        </form>
+    </header>
+    <main>
+        <form class="divSuperior" action="/setClient" method="post">
+            <div class="divTopInfo">
+            <div class="divTop">
+                <label for="CPF">CPF</label>
+                <input type="text" name="CPF" maxlength="14" size="15">
+
+                <label for="nome">Nome</label>
+                <input type="text" name="name" maxlength="50" size="15">
+
+                             
+                <label for="endereco">Endereço</label>
+                <input type="text" name="address" maxlength="80" size="15">
+
+                <label for="telefone">Telefone</label>
+                <input type="text" name="phone" maxlength="14" size="15">
+                           
+                <label for="email">Email</label>
+                <input type="text" name="mail" maxlength="50" size="15">
+            </div>
+                
+            </div>
+            <div class="divTopCRUD">
+                <button>Remover</button>
+                <button>Atualizar</button>
+                <button type="submit">Inserir</button>
+                <button>Consultar</button>
+            </div>
+            <div class="divTopNota">
+                <button>Notas Fiscais</button>
+            </div>
+        </form>
+        
+        <div class="divBottom">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Idade</th>
+                        <th>Profissão</th>
+                        <th>Endereço</th>
+                        <th>Numero</th>
+                        <th>Profição</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Alice Freitas Notredame</td>
+                        <td>30</td>
+                        <td>Engineer</td>
+                        <td>Alice Freitas Notredame</td>
+                        <td>30</td>
+                        <td>Engineer</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
+    <!-- <script th:if="${erroMsg != null}">
+        alert("Preencha todos os campos");
+    </script> -->
+
 </body>
 </html>
