--- a/src/main/resources/templates/vitrine.html
+++ b/src/main/resources/templates/vitrine.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vitrine</title>
-  <link rel="stylesheet" href="../static/css/vitrine.css">
+  <!-- <link rel="stylesheet" th:href="@{/css/vitrine.css}"> -->
+  <link rel="stylesheet" href="..static/css/vitrine.css">
 </head>
 <body>
   <header>
@@ -18,7 +19,7 @@
     <div class="container">
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/men-golf-polo-t-shirt-black.jpg"></image>
+        <image class="item-image" th:src="@{/images/men-golf-polo-t-shirt-black.jpg}"></image>
         <div class="item-info">
           <p>Men Golf Polo T-Shirt Black</p>
           <p>R$ 89,90</p>
@@ -32,7 +33,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/men-chino-pants-beige.jpg"></image>
+        <image class="item-image" th:src="@{/images/men-chino-pants-beige.jpg}"></image>
         <div class="item-info">
           <p>Men Chino Pants Beige</p>
           <p>R$ 129,90</p>
@@ -46,7 +47,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/women-knit-ballet-flat-black.jpg"></image>
+        <image class="item-image" th:src="@{/images/women-knit-ballet-flat-black.jpg}"></image>
         <div class="item-info">
           <p>Women Knit Ballet Flat Black</p>
           <p>R$ 159,90</p>
@@ -60,7 +61,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/adults-plain-cotton-tshirt-2-pack-plus-black.jpg"></image>
+        <image class="item-image" th:src="@{/images/adults-plain-cotton-tshirt-2-pack-plus-black.jpg}"></image>
         <div class="item-info">
           <p>Adults Plain Cotton T-Shirt 2 Pack Plus Black</p>
           <p>R$ 99,90</p>
@@ -74,7 +75,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/liquid-laundry-detergent-plain.jpg"></image>
+        <image class="item-image" th:src="@{/images/liquid-laundry-detergent-plain.jpg}"></image>
         <div class="item-info">
           <p>Liquid Laundry Detergent Plain</p>
           <p>R$ 34,90</p>
@@ -88,7 +89,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/men-athletic-shoes-green.jpg"></image>
+        <image class="item-image" th:src="@{/images/men-athletic-shoes-green.jpg}"></image>
         <div class="item-info">
           <p>Men Athletic Shoes Green</p>
           <p>R$ 229,90</p>
@@ -102,7 +103,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/plain-hooded-fleece-sweatshirt-yellow.jpg"></image>
+        <image class="item-image" th:src="@{/images/plain-hooded-fleece-sweatshirt-yellow.jpg}"></image>
         <div class="item-info">
           <p>Plain Hooded Fleece Sweatshirt Yellow</p>
           <p>R$ 149,90</p>
@@ -116,7 +117,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/trash-can-with-foot-pedal-50-liter.jpg"></image>
+        <image class="item-image" th:src="@{/images/trash-can-with-foot-pedal-50-liter.jpg}"></image>
         <div class="item-info">
           <p>Trash Can With Foot Pedal 50 Liter</p>
           <p>R$ 89,90</p>
@@ -130,7 +131,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/women-stretch-popover-hoodie-blue.jpg"></image>
+        <image class="item-image" th:src="@{/images/women-stretch-popover-hoodie-blue.jpg}"></image>
         <div class="item-info">
           <p>Women Stretch Popover Hoodie Blue</p>
           <p>R$ 179,90</p>
@@ -144,7 +145,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/duvet-cover-set-red-twin.jpg"></image>
+        <image class="item-image" th:src="@{/images/duvet-cover-set-red-twin.jpg}"></image>
         <div class="item-info">
           <p>Duvet Cover Set Red Twin</p>
           <p>R$ 199,90</p>
@@ -158,7 +159,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/men-navigator-sunglasses-silver.jpg"></image>
+        <image class="item-image" th:src="@{/images/men-navigator-sunglasses-silver.jpg}"></image>
         <div class="item-info">
           <p>Men Navigator Sunglasses Silver</p>
           <p>R$ 99,90</p>
@@ -172,7 +173,7 @@
       </div>
 
       <div class="item-container">
-        <image class="item-image" src="../static/images/round-sunglasses-gold.jpg"></image>
+        <image class="item-image" th:src="@{/images/round-sunglasses-gold.jpg}"></image>
         <div class="item-info">
           <p>Round Sunglasses Gold</p>
           <p>R$ 109,90</p>
