--- a/src/main/resources/templates/carrinho.html
+++ b/src/main/resources/templates/carrinho.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout</title>
+  <!-- <link rel="stylesheet" th:href="@{/css/carrinho.css}"> -->
   <link rel="stylesheet" href="../static/css/carrinho.css">
 </head>
 <body>
