--- a/src/main/resources/templates/cliente.html
+++ b/src/main/resources/templates/cliente.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+       <!-- <link rel="stylesheet" th:href="@{/css/cliente.css}"> -->
        <link rel="stylesheet" href="../static/css/cliente.css">
     <title>Clientes</title>
 </head>
@@ -16,35 +17,34 @@
         </form>
     </header>
     <main>
-        <form class="divSuperior" action="/setClient" method="post">
+        <form class="divSuperior" th:action="@{/setClient}" method="post">
             <div class="divTopInfo">
             <div class="divTop">
-                <label for="CPF">CPF</label>
-                <input type="text" name="CPF" maxlength="14" size="15">
+                <label>CPF</label>
+                <input type="text" name="CPF" maxlength="14" size="15" th:value="${cpf}">
 
-                <label for="nome">Nome</label>
-                <input type="text" name="name" maxlength="50" size="15">
+                <label>Nome</label>
+                <input type="text" name="name" maxlength="50" size="15" th:value="${name}">
 
                              
-                <label for="endereco">Endereço</label>
-                <input type="text" name="address" maxlength="80" size="15">
+                <label>Endereço</label>
+                <input type="text" name="address" maxlength="80" size="15" th:value="${address}">
 
-                <label for="telefone">Telefone</label>
-                <input type="text" name="phone" maxlength="14" size="15">
+                <label>Telefone</label>
+                <input type="text" name="phone" maxlength="14" size="15" th:value="${phone}">
                            
-                <label for="email">Email</label>
-                <input type="text" name="mail" maxlength="50" size="15">
+                <label>Email</label>
+                <input type="text" name="mail" maxlength="50" size="15" th:value="${mail}">
             </div>
-                
             </div>
             <div class="divTopCRUD">
-                <button>Remover</button>
-                <button>Atualizar</button>
-                <button type="submit">Inserir</button>
-                <button>Consultar</button>
+                <button type="submit" name="action" value="remove">Remover</button>
+                <button type="submit" name="action" value="update">Atualizar</button>
+                <button type="submit" name="action" value="insert">Inserir</button>
+                <button type="submit" name="action" value="consult">Consultar</button>
             </div>
             <div class="divTopNota">
-                <button>Notas Fiscais</button>
+                <button type="submit" name="action" value="nota">Notas Fiscais</button>
             </div>
         </form>
         
@@ -57,25 +57,29 @@
                         <th>Profissão</th>
                         <th>Endereço</th>
                         <th>Numero</th>
-                        <th>Profição</th>
+                        <th>Profissão</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Alice Freitas Notredame</td>
-                        <td>30</td>
-                        <td>Engineer</td>
-                        <td>Alice Freitas Notredame</td>
-                        <td>30</td>
-                        <td>Engineer</td>
+                    <tr th:each="client : ${clientList}">
+                        <td th:text="${client.cpf}"></td>
+                        <td th:text="${client.name}"></td>
+                        <td th:text="${client.address}"></td>
+                        <td th:text="${client.phone}"></td>
+                        <td th:text="${client.mail}"></td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </main>
-    <!-- <script th:if="${erroMsg != null}">
-        alert("Preencha todos os campos");
-    </script> -->
+    <script th:inline="javascript">
+        if (/*[[${sucessMsg}]]*/ false) {
+            alert("Cliente Registrado");
+        }
+        if (/*[[${erroMsg}]]*/ false) {
+            alert("Preencha todos os campos");
+        }
+    </script>
 
 </body>
 </html>
