--- a/src/main/resources/templates/vitrine.html
+++ b/src/main/resources/templates/vitrine.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vitrine</title>
-  <!-- <link rel="stylesheet" th:href="@{/css/vitrine.css}"> -->
-  <link rel="stylesheet" href="..static/css/vitrine.css">
+  <link rel="stylesheet" th:href="@{/css/vitrine.css}">
+  <!-- <link rel="stylesheet" href="..static/css/vitrine.css"> -->
 </head>
 <body>
   <header>
