--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -11,7 +11,7 @@ main {
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 9, 9, 0.356);
+  background-color: rgb(0, 17, 60);
 }
 
 section {
@@ -30,4 +30,5 @@ button{
   justify-self: center;
   align-self: center;
   font-size: 2rem;
+  background-color: #ea9d51;
 }
